--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "gsap": "^3.13.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
